# Almat-LD

./: .gitignore  README.md
ocawreck/: .merlin  README.md  ast.ml  dune  example.wr  ideas.ml  jack_callback.ml  lexer.mll  parser.conflicts  parser.mly  stringreadertest.ml  test.wr  toplevel.ml  wreck.el  wreck.ml
ocawreck/_build/: .db  .digest-db
ocawreck/_build/.aliases/default/: lib-jack.cmi-all-00000000000000000000000000000000  lib-parselib.cmi-all-00000000000000000000000000000000  lib-wreckparse.cmi-all-00000000000000000000000000000000
ocawreck/_build/default/: .merlin  ast.ml  codegen.ml  jack.cma  jack.cmxa  jack.ml-gen  jack_callback.c  lexer.ml  lexer.mll  parselib.cma  parselib__.ml-gen  parser.ml  parser.mli  parser.mly  parser__mock.ml.mock  parser__mock.mli.inferred  toplevel.ml  wreckparse.cma  wreckparse.cmxa  wreckparse.ml-gen
ocawreck/_build/default/.jack.objs/: jack_callback.ml.d
ocawreck/_build/default/.jack.objs/byte/: jack.cmi  jack.cmo  jack.cmt  jack__Jack_callback.cmi  jack__Jack_callback.cmo  jack__Jack_callback.cmt
ocawreck/_build/default/.jack.objs/native/: jack.cmx  jack__Jack_callback.cmx
ocawreck/_build/default/.parselib.objs/: lexer.ml.all-deps  parselib.ml.all-deps  parselib.ml.d  parser.mli.all-deps  wreck.ml.all-deps  wreck.ml.d
ocawreck/_build/default/.parselib.objs/byte/: parselib.cmi  (+18 more)
ocawreck/_build/default/.toplevel.eobjs/: codegen.ml.d  toplevel.ml.d
ocawreck/_build/default/.utop/: utop.ml
ocawreck/_build/default/.wreckparse.objs/: ast.ml.all-deps  lexer.ml.all-deps  parselib.ml.all-deps  parser.mli.all-deps
(+146 files in other folders)
